# qq

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/api/requests/: job_requests.py
app/config/: configs.py
app/model/: job_models.py
app/repository/: database.py  dependencies.py  job_repository.py
app/scripts/: fill_queue.py
app/service/: job_service.py  worker.py
app/tests/: test_api.py  test_worker.py
app/utils/: util.py
static/: index.html
